<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_registration"
                android:textSize="27sp"
                />


            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_title"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/edit_birthdate"
                android:layout_below="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="date"
                android:hint="@string/lbl_birthdate"/>

            <TextView
                android:id="@+id/txt_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_birthdate"
                android:text="@string/lbl_sex"
                android:textSize="20sp"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:id="@+id/rgroup_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_sex">

                <RadioButton
                    android:id="@+id/rbtn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_male" />
                <RadioButton
                    android:id="@+id/rbtn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_female"/>
                <RadioButton
                    android:id="@+id/rbtn_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_other"/>
            </RadioGroup>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rgroup_sex"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_phone_number"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_phone"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="16dp"
                android:layout_below="@id/edit_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_password_confirmation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="16dp"
                android:layout_below="@id/edit_password_layout">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_password_confirmation"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_password_mismatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_password_confirmation_layout"
                android:layout_marginTop="5dp"
                android:text="@string/lbl_password_confirmation_alert"
                android:layout_alignParentEnd="true"
                android:textColor="@color/design_default_color_error"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/txtbtn_clear_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_password_confirmation_layout"
                android:layout_marginTop="5dp"
                android:text="@string/btn_clear_fields"
                android:clickable="true"
                android:onClick="clearFields"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_password_mismatch"
                android:layout_marginTop="16dp"
                android:layout_alignParentEnd="true"
                android:text="@string/btn_register"
                android:onClick="registerUser"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>